Fixed squishing

--- a/webdev/src/App/LocationSearch/Location/locations.scss
+++ b/webdev/src/App/LocationSearch/Location/locations.scss
@@ -6,15 +6,12 @@
   border: 1px solid #1e62ea;
   border-radius: 8px;
   background-color: #80d4ff;
-  overflow: hidden;
-  white-space: nowrap;
-
+  overflow-y: hidden;
   h5 {
     width: 100%;
     font-weight: normal;
     margin: 0;
     font-size: 15px;
-    overflow: hidden;  /* "overflow" value must be different from "visible" */
     text-overflow: ellipsis;
   }
 
