--- a/webdev/src/App/LocationSearch/location_search.scss
+++ b/webdev/src/App/LocationSearch/location_search.scss
@@ -3,7 +3,6 @@
   width: 100%;
   height: 49%;
   border: 1px solid #37adea;
-  min-width: 100%;
 
   .locations-list-div {
     position: relative;
