--- a/webdev/src/App/TripPlanner/SelectedLocation/selected_location.scss
+++ b/webdev/src/App/TripPlanner/SelectedLocation/selected_location.scss
@@ -6,16 +6,12 @@
   border: 1px solid #1e62ea;
   border-radius: 8px;
   background-color: #80d4ff;
-  white-space: nowrap;
-  overflow: hidden;
+  overflow-y: hidden;
 
   h5 {
     font-weight: normal;
     margin: 0;
     font-size: 16px;
-    width: 80%;
-    overflow: hidden;  /* "overflow" value must be different from "visible" */
-    text-overflow: ellipsis;
   }
 
   .location-info {
