--- a/webdev/src/App/TripPlanner/trip_planner.scss
+++ b/webdev/src/App/TripPlanner/trip_planner.scss
@@ -4,7 +4,6 @@
   border: 1px solid #37adea;
   width: 100%;
   height: 50.5%;
-  min-width: 100%;
 
   .map-options {
     min-width: 100%;
